--- a/luggage/ViewController/LocateViewController.xib
+++ b/luggage/ViewController/LocateViewController.xib
@@ -14,7 +14,41 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3FS-bF-3xl">
+                    <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="Qsg-kZ-Zm1"/>
+                    </constraints>
+                    <items>
+                        <navigationItem title="追踪" id="ceo-8P-mWq">
+                            <barButtonItem key="leftBarButtonItem" style="plain" id="yvU-Nl-n24">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="DaC-Db-FaC">
+                                    <rect key="frame" x="20" y="7" width="44" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="返回"/>
+                                    <connections>
+                                        <action selector="onBackButton:" destination="-1" eventType="touchUpInside" id="CrL-em-aQS"/>
+                                    </connections>
+                                </button>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="3FS-bF-3xl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="2gl-Un-YIS"/>
+                <constraint firstAttribute="trailing" secondItem="3FS-bF-3xl" secondAttribute="trailing" id="BGW-lm-qLw"/>
+                <constraint firstItem="3FS-bF-3xl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="ieQ-pV-jFO"/>
+                <constraint firstItem="3FS-bF-3xl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="sNt-cf-03b"/>
+            </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="2gl-Un-YIS"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="424" y="215"/>
         </view>
     </objects>
 </document>
