--- a/luggage/ViewController/ViewController.xib
+++ b/luggage/ViewController/ViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
                 <outlet property="locateButton" destination="gH0-JF-AE6" id="ohf-nZ-rfy"/>
+                <outlet property="navigatorBar" destination="yZn-N6-e7X" id="u8L-ug-EpX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,18 +23,72 @@
                         <constraint firstAttribute="height" constant="60" id="Rat-hY-hcv"/>
                     </constraints>
                     <state key="normal" title="位置">
-                        <color key="titleColor" red="1" green="0.092533442313789904" blue="0.066853115578622613" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
                         <action selector="onLocateButton:" destination="-1" eventType="touchUpInside" id="GbG-xZ-RKB"/>
                     </connections>
                 </button>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZn-N6-e7X">
+                    <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="TqJ-b7-g2f"/>
+                    </constraints>
+                    <color key="tintColor" red="0.2256591365" green="0.41020442969999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <textAttributes key="titleTextAttributes">
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </textAttributes>
+                    <items>
+                        <navigationItem title="Luggage" id="11O-6F-Tmh">
+                            <barButtonItem key="rightBarButtonItem" style="plain" id="oAA-30-YK5">
+                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nH1-Md-X7b">
+                                    <rect key="frame" x="540" y="7" width="40" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="分享">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="onShareButton:" destination="-1" eventType="touchUpInside" id="IRv-MX-ExF"/>
+                                    </connections>
+                                </button>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cbK-yB-v1j">
+                    <rect key="frame" x="0.0" y="144" width="600" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="7UQ-Xg-aal"/>
+                    </constraints>
+                    <state key="normal" title="设置">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c93-3U-GQO">
+                    <rect key="frame" x="0.0" y="84" width="600" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="m9X-Jh-EoI"/>
+                    </constraints>
+                    <state key="normal" title="配对">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="0.79451358299836328" blue="0.21677502401332149" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
+                <constraint firstItem="yZn-N6-e7X" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="1nS-sL-9rx"/>
+                <constraint firstItem="c93-3U-GQO" firstAttribute="top" secondItem="yZn-N6-e7X" secondAttribute="bottom" constant="20" id="ASk-Op-EcD"/>
                 <constraint firstAttribute="bottom" secondItem="gH0-JF-AE6" secondAttribute="bottom" id="D7n-Q3-LOd"/>
+                <constraint firstItem="c93-3U-GQO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Dz5-e9-te0"/>
                 <constraint firstAttribute="trailing" secondItem="gH0-JF-AE6" secondAttribute="trailing" id="Jbs-Ib-ePu"/>
+                <constraint firstAttribute="trailing" secondItem="cbK-yB-v1j" secondAttribute="trailing" id="Sw2-6w-ved"/>
                 <constraint firstItem="gH0-JF-AE6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aWo-gf-pji"/>
+                <constraint firstAttribute="trailing" secondItem="c93-3U-GQO" secondAttribute="trailing" id="bXg-KV-JHn"/>
+                <constraint firstItem="cbK-yB-v1j" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qKg-yk-vpM"/>
+                <constraint firstItem="yZn-N6-e7X" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uup-Kq-0CD"/>
+                <constraint firstAttribute="trailing" secondItem="yZn-N6-e7X" secondAttribute="trailing" id="yni-Bw-NGA"/>
+                <constraint firstItem="cbK-yB-v1j" firstAttribute="top" secondItem="c93-3U-GQO" secondAttribute="bottom" constant="20" id="znV-Pt-PtG"/>
             </constraints>
         </view>
     </objects>
