--- a/luggage/ViewController/ViewController.xib
+++ b/luggage/ViewController/ViewController.xib
@@ -11,6 +11,7 @@
                 <outlet property="lostButton" destination="xCB-Cv-j5u" id="Xni-fD-ffV"/>
                 <outlet property="navigatorBar" destination="yZn-N6-e7X" id="u8L-ug-EpX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weightLabel" destination="gqT-sh-zZO" id="IOW-9Z-cKN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -110,6 +111,17 @@
                         <action selector="onLostButton:" destination="-1" eventType="touchUpInside" id="78d-RE-dNs"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重量：0.0Kg" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqT-sh-zZO">
+                    <rect key="frame" x="50" y="384" width="210" height="100"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="210" id="2cL-IS-8MD"/>
+                        <constraint firstAttribute="height" constant="100" id="Naf-uw-1xv"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="0.79451358299836328" blue="0.21677502401332149" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -120,7 +132,9 @@
                 <constraint firstItem="cbK-yB-v1j" firstAttribute="top" secondItem="yZn-N6-e7X" secondAttribute="bottom" constant="100" id="d80-Vg-aZZ"/>
                 <constraint firstItem="gH0-JF-AE6" firstAttribute="top" secondItem="c93-3U-GQO" secondAttribute="bottom" constant="10" id="gVK-CO-kjS"/>
                 <constraint firstItem="gH0-JF-AE6" firstAttribute="leading" secondItem="xCB-Cv-j5u" secondAttribute="trailing" constant="10" id="hBT-tW-m9g"/>
+                <constraint firstItem="gqT-sh-zZO" firstAttribute="top" secondItem="xCB-Cv-j5u" secondAttribute="bottom" constant="10" id="hPe-6a-gvq"/>
                 <constraint firstItem="xCB-Cv-j5u" firstAttribute="top" secondItem="yZn-N6-e7X" secondAttribute="bottom" constant="210" id="qLo-Wy-Z60"/>
+                <constraint firstItem="gqT-sh-zZO" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="tJS-K6-ggC"/>
                 <constraint firstItem="c93-3U-GQO" firstAttribute="leading" secondItem="cbK-yB-v1j" secondAttribute="trailing" constant="10" id="tNy-w9-fYa"/>
                 <constraint firstItem="yZn-N6-e7X" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="uup-Kq-0CD"/>
                 <constraint firstAttribute="trailing" secondItem="yZn-N6-e7X" secondAttribute="trailing" id="yni-Bw-NGA"/>
